# image-gallery

./: .gitignore  README.md  pyproject.toml  requirements.txt
project/: README.md  index.html  styles.css
tests/: test_css_requirements.py  test_html_requirements.py  test_validity.py
